# pypi

./: LICENSE  pyproject.toml  readme.md
src/dec2bin_converter/: converter.py
src/dec2bin_converter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dec_bin_converter/: converter.py
src/dec_bin_converter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_converter.py
