[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name= "dec2bin_converter"
version = "0.1.0"
authors = [
  { name="Virendra Singh Kaira", email="virendra513info@gmail.com" },
]
description = "This is the decimal_binary_converter."
readme = "readme.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

[project.urls]
Homepage = "https://github.com/Virendra513/pypi"
Issues = "https://github.com/Virendra513/pypi/issues"